[tool.poetry]
name = "arb_conexion"
version = "0.1.0"
description = "Conexion a Solidity"
authors = ["danielmontesalejandres <danielmontesalejandres@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
